fix <a> box height https://stackoverflow.com/questions/31235767/why-the-parent-height-is-not-the-same-is-inner-image-height

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -58,7 +58,8 @@ nav {
     //height: 120px;
 
     .logo-a {
-      border: 2px solid pink;
+      display: block;
+      //border: 2px solid pink;
     }
   }
 
